# audiobook-creator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/audiobook_creator/: __init__.py  audiobook.py  chunker.py  cli.py  dynamic_pause.py  parser.py  supertonic_wrapper.py  tts_engine.py
